sportsmgmt/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <description>Represents a sports team participating in a league. Holds high-level team information used across sports.</description>
    <pluralLabel>Teams</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Team Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 