sportsmgmt/main/default/objects/Team__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the team is based</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField> 