sportsmgmt/main/default/objects/Team__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The division this team belongs to within their league</description>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField> 