sportsmgmt/main/default/objects/Team__c/fields/Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Founded_Year__c</fullName>
    <description>The year the team was founded</description>
    <label>Founded Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 