sportsmgmt/main/default/objects/Team__c/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <description>The league this team belongs to</description>
    <label>League</label>
    <referenceTo>League__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 