sportsmgmt/main/default/objects/Team__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <description>The home stadium or venue for the team</description>
    <label>Stadium</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 